--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,17 @@ url: "https://rodrigo-libc.github.io"  # URL do site
 baseurl: ""                             # Deixe vazio para site de usuário
 
 # Tema do Jekyll
-theme: minima                           # Tema padrão, leve e pronto para usar
-sass:
-  sass_dir: assets/css
+remote_theme: sharadcodes/jekyll-theme-dark-reader
+plugins:
+  - jekyll-remote-theme
 
 # Configurações de exibição
 paginate: 5                             # Número de posts por página (se tiver blog)
 show_posts: true                        # Exibir posts no index
+
+# Opções adicionais (compatíveis com Dark Reader)
+markdown: kramdown
+kramdown:
+  input: GFM
+
 
