--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ baseurl: ""                             # Deixe vazio para site de usuário
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-remote-theme
+  jekyll-paginate
 
 # Configurações de exibição
 paginate: 5                             # Número de posts por página (se tiver blog)
