--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Meu Site
+title: Na Linha Do Terminal
 description: Bem-vindo ao meu site pessoal!
 url: "https://rodrigo-libc.github.io"
 baseurl: ""
